--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         node-version: [12.x]
     env:
-      msbuildtarget: Solution/HelloPCF
+      msbuildtarget: reactSolution/src
 
     steps:
       - uses: actions/checkout@v2
